<resources>
    <string name="app_name">SendMeal</string>
    <string name="txtRegistrarUsuario">Registrar Usuario</string>
    <string name="txtNombre">Nombre</string>
    <string name="txtClave">Contraseña</string>
    <string name="txtClave2">Repetir contraseña</string>
    <string name="txtCorreo">Correo electrónico</string>
    <string name="txtTarjeta">Tarjeta de crédito</string>
    <string name="txtTipoCuenta">Tipo de cuenta</string>
    <string name="txtCredito">Crédito inicial</string>
    <string name="txtNotificar">Notificar por correo electrónico</string>
    <string name="txtNoNotificar">No notificar por correo electrónico</string>
    <string name="txtVendedor">Es vendedor</string>
    <string name="txtAlias">Alias CBU</string>
    <string name="txtCBU">CBU</string>
    <string name="txtCondiciones">Acepta términos y condiciones</string>
    <string name="txtRegistrar">Registrar</string>

    <string name="errorCampo">Campo obligatorio</string>
    <string name="errorClave">Las contraseñas no coinciden</string>

    <string name="Resgistrarme">Registrarme</string>
    <string name="CrearItem">Crear item</string>
    <string name="ListaItems">Lista de items</string>
    <string name="BuscarItem">Buscar item</string>
    <string name="CrearPedido">Crear pedido</string>
    <string name="MapaPedidos">Mapa de pedidos</string>
    <string name="PedidosEstados">Estados</string>


    <string name="txtCrearPlato"> Crear Plato</string>
    <string name="txtIdPlato"> ID plato</string>
    <string name="txtNombrePlato">Nombre</string>
    <string name="txtDescripcionPlato">Descripcion</string>
    <string name="txtPrecioPlato">Precio</string>
    <string name="txtCaloriasPlato">Calorias</string>
    <string name="btnGuardarPlato">Guardar plato</string>


    <string name="txtBuscarPlato"> Buscar plato</string>
    <string name="btnBuscarPlato"> Buscar plato</string>
    <string name="txtRangoPrecio"> Rango de precios</string>
    <string name="txtPedido"> Pedido </string>

<string name="btnFoto"> Sacar foto</string>

    <string-array name="estados_array">
        <item>TODOS</item>
        <item>Pendiente</item>
        <item>Enviado</item>
        <item>Aceptado</item>
        <item>Rechazado</item>
        <item>En preparacion</item>
        <item>En envio</item>
        <item>Entregado</item>
        <item>Cancelado</item>
    </string-array>

</resources>
