<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AltaPlato">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarAltaPlato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="@string/txtCrearPlato"/>

    <TextView
        android:id="@+id/APtxtId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtIdPlato" />

    <EditText
        android:id="@+id/APeditId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/APtxtNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtNombrePlato" />

    <EditText
        android:id="@+id/APeditNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="" />

    <TextView
        android:id="@+id/APtxtDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtDescripcionPlato" />

    <EditText
        android:id="@+id/APeditDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine" />

    <TextView
        android:id="@+id/APtxtPrecio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtPrecioPlato" />

    <EditText
        android:id="@+id/APeditPrecio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/APtxtCalorias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtCaloriasPlato" />

    <EditText
        android:id="@+id/APeditCalorias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <Button
        android:id="@+id/APbtnGuardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnGuardarPlato" />

</LinearLayout>