<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Registrar usuario"
        android:textColor="@color/colorTitulo"
        android:textSize="@dimen/dimTitulo"/>

    <TextView
        android:id="@+id/AMtxtNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtNombre"
        android:textColor="@color/colotEtiquetas"
        android:textSize="@dimen/dimEtiquetas"/>

    <EditText
        android:id="@+id/AMeditNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="" />

    <TextView
        android:id="@+id/AMtxtClave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtClave"
        android:textColor="@color/colotEtiquetas"
        android:textSize="@dimen/dimEtiquetas"/>

    <EditText
        android:id="@+id/AMeditClave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/AMtxtClave2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtClave2"
        android:textColor="@color/colotEtiquetas"
        android:textSize="@dimen/dimEtiquetas"/>

    <EditText
        android:id="@+id/AMeditClave2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/AMtxtCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtCorreo"
        android:textColor="@color/colotEtiquetas"
        android:textSize="@dimen/dimEtiquetas"/>

    <EditText
        android:id="@+id/AMeditCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="" />

    <TextView
        android:id="@+id/AMtxtTarjeta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtTarjeta"
        android:textColor="@color/colotEtiquetas"
        android:textSize="@dimen/dimEtiquetas"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/AMeditNumero"
            android:layout_width="193dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:hint="Numero"/>

        <EditText
            android:id="@+id/AMeditDig"
            android:layout_width="108dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:hint="CCV" />

        <EditText
            android:id="@+id/AMeditVto"
            android:layout_width="107dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date"
            android:hint="MM/AA"/>
    </LinearLayout>


    <RadioGroup
        android:id="@+id/AMTipoCuenta"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/AMtxtTipoCuenta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txtTipoCuenta"
            android:textColor="@color/colotEtiquetas"
            android:textSize="@dimen/dimEtiquetas"/>

        <RadioButton
            android:id="@+id/AMoptBase"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:text="Base" />

        <RadioButton
            android:id="@+id/AMoptPremium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Premiun" />

        <RadioButton
            android:id="@+id/AMoptFull"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Full" />
    </RadioGroup>

    />


    <TextView
        android:id="@+id/AMtxtCredito"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtCredito"
        android:textColor="@color/colotEtiquetas"
        android:textSize="@dimen/dimEtiquetas"/>

    <SeekBar
        android:id="@+id/AMseekCredito"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="1500" />

    <ToggleButton
        android:id="@+id/AMtoggleNotificar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textOff="@string/txtNoNotificar"
        android:textOn="@string/txtNotificar"
     />

    <Switch
        android:id="@+id/AMswitchVendedor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtVendedor"
        android:textColor="@color/colotEtiquetas"
        android:textSize="@dimen/dimEtiquetas"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="119dp"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/AMtxtAlias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtAlias"
            android:textColor="@color/colotEtiquetas"
            android:textSize="@dimen/dimEtiquetas"/>

        <EditText
            android:id="@+id/AMeditAlias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="" />

        <TextView
            android:id="@+id/AMtextCBU"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtCBU"
            android:textColor="@color/colotEtiquetas"
            android:textSize="@dimen/dimEtiquetas"/>

        <EditText
            android:id="@+id/AMeditCBU"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="" />

    </LinearLayout>

    <CheckBox
        android:id="@+id/AMcheckCondiciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtCondiciones"
        android:textColor="@color/colotEtiquetas"
        android:textSize="@dimen/dimEtiquetas" />

    <Button
        android:id="@+id/AMbtnRegistrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtRegistrar" />
</LinearLayout>
</ScrollView>